Bug 180221 - The application Kontact (kontact) crashed and caused the signal 11 (SIGSEGV).
Summary: The application Kontact (kontact) crashed and caused the signal 11 (SIGSEGV).
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 187489 187493 187494 187582 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-01-10 10:15 UTC by xzill
Modified: 2009-04-29 14:39 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
valgrind-report (17.49 KB, text/plain)
2009-03-11 13:21 UTC, xzill
Details

Note You need to log in before you can comment on or make changes to this bug.
Description xzill 2009-01-10 10:15:50 UTC
Version:            (using KDE 4.1.3)
OS:                Linux
Installed from:    SuSE RPMs

Anwendung: Kontact (kontact), Signal SIGSEGV
[?1034h(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
[Thread debugging using libthread_db enabled]
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
[KCrash handler]
#6  0xb6148a6c in KCal::IncidenceBase::uid() const ()
   from /usr/lib/libkcal.so.4
#7  0xb06932c6 in KOEventViewer::changeIncidenceDisplay(KCal::Incidence*, int)
    () from /usr/lib/libkorganizer_eventviewer.so.4
#8  0xb080d1fe in CalendarView::changeIncidenceDisplay(KCal::Incidence*, int)
    () from /usr/lib/libkorganizerprivate.so.4
#9  0xb0815c3f in CalendarView::incidenceChanged(KCal::Incidence*, KCal::Incidence*, int) () from /usr/lib/libkorganizerprivate.so.4
#10 0xb081a59c in CalendarView::qt_metacall(QMetaObject::Call, int, void**) ()
   from /usr/lib/libkorganizerprivate.so.4
#11 0xb7dfe580 in QMetaObject::activate(QObject*, int, int, void**) ()
   from /usr/lib/libQtCore.so.4
#12 0xb7dff302 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#13 0xb0704f0f in KOrg::IncidenceChangerBase::incidenceChanged(KCal::Incidence*, KCal::Incidence*, int) () from /usr/lib/libkorganizer_interfaces.so.4
#14 0xb08b3931 in IncidenceChanger::changeIncidence(KCal::Incidence*, KCal::Incidence*, int, bool) () from /usr/lib/libkorganizerprivate.so.4
#15 0xb07f522e in ?? () from /usr/lib/libkorganizerprivate.so.4
#16 0xb5c49c6b in QSortFilterProxyModel::setData(QModelIndex const&, QVariant const&, int) () from /usr/lib/libQtGui.so.4
#17 0xb5c6ec3d in QStyledItemDelegate::editorEvent(QEvent*, QAbstractItemModel*, QStyleOptionViewItem const&, QModelIndex const&) ()
   from /usr/lib/libQtGui.so.4
#18 0xb5bcbbd6 in QAbstractItemViewPrivate::sendDelegateEvent(QModelIndex const&, QEvent*) const () from /usr/lib/libQtGui.so.4
#19 0xb5bcbe8b in QAbstractItemView::edit(QModelIndex const&, QAbstractItemView::EditTrigger, QEvent*) () from /usr/lib/libQtGui.so.4
#20 0xb5bcc147 in QAbstractItemView::mouseReleaseEvent(QMouseEvent*) ()
   from /usr/lib/libQtGui.so.4
#21 0xb5c05894 in QTreeView::mouseReleaseEvent(QMouseEvent*) ()
   from /usr/lib/libQtGui.so.4
#22 0xb5756a62 in QWidget::event(QEvent*) () from /usr/lib/libQtGui.so.4
#23 0xb5a8ca83 in QFrame::event(QEvent*) () from /usr/lib/libQtGui.so.4
#24 0xb5b231bf in QAbstractScrollArea::viewportEvent(QEvent*) ()
   from /usr/lib/libQtGui.so.4
#25 0xb5bcdf3f in QAbstractItemView::viewportEvent(QEvent*) ()
   from /usr/lib/libQtGui.so.4
#26 0xb5c05ae4 in QTreeView::viewportEvent(QEvent*) ()
   from /usr/lib/libQtGui.so.4
#27 0xb5b25765 in ?? () from /usr/lib/libQtGui.so.4
#28 0xb7de8b3a in QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#29 0xb56fe8da in QApplicationPrivate::notify_helper(QObject*, QEvent*) ()
   from /usr/lib/libQtGui.so.4
#30 0xb5707111 in QApplication::notify(QObject*, QEvent*) ()
   from /usr/lib/libQtGui.so.4
#31 0xb78a641d in KApplication::notify(QObject*, QEvent*) ()
   from /usr/lib/libkdeui.so.5
#32 0xb7de9961 in QCoreApplication::notifyInternal(QObject*, QEvent*) ()
   from /usr/lib/libQtCore.so.4
#33 0xb570639e in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&) () from /usr/lib/libQtGui.so.4
#34 0xb5770716 in ?? () from /usr/lib/libQtGui.so.4
#35 0xb576fac5 in QApplication::x11ProcessEvent(_XEvent*) ()
   from /usr/lib/libQtGui.so.4
#36 0xb579808a in ?? () from /usr/lib/libQtGui.so.4
#37 0xb50769a8 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#38 0xb507a063 in ?? () from /usr/lib/libglib-2.0.so.0
#39 0xb507a221 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#40 0xb7e13fb8 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#41 0xb5797785 in ?? () from /usr/lib/libQtGui.so.4
#42 0xb7de801a in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#43 0xb7de81da in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) ()
   from /usr/lib/libQtCore.so.4
#44 0xb7dea895 in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#45 0xb56fe777 in QApplication::exec() () from /usr/lib/libQtGui.so.4
#46 0x0804c19f in _start ()
Comment 1 Pino Toscano 2009-01-10 10:38:35 UTC
Could you tell us what you did when kontact crashed?
Comment 2 xzill 2009-01-11 21:25:07 UTC
I used a second korganizer-ressource from korganizer-3.93 as localdir Ressource.

In the Todo-List a click on a marked entry doesnt unmark the entry, the second try crashes.
Some other actions causes also a crash.
Deleting an entry is impossible.
Comment 3 Sergio Martins 2009-01-13 03:44:04 UTC
Can you install debug symbols and reproduce the crash?

http://techbase.kde.org/Development/Tutorials/Debugging/How_to_create_useful_crash_reports
Comment 4 xzill 2009-01-14 11:41:47 UTC
after installing the debug info
new adding korganizer file as localdir Ressource
testing -> no crash
localdir Ressource as standard -> no crash
ending and new starting kontact 
 -> the changes weren't saved (but there is a new file in the directory)
    and now it crashes as before

Anwendung: Kontact (kontact), Signal SIGSEGV
[?1034h(no debugging symbols found)
2 x (no debugging symbols found)
[Thread debugging using libthread_db enabled]
32 x (no debugging symbols found)
[KCrash handler]
#6  KCal::IncidenceBase::uid (this=0x8ba5dd0)
    at /usr/include/QtCore/qatomic_i386.h:116
#7  0xb079d2c6 in KOEventViewer::changeIncidenceDisplay(KCal::Incidence*, int)
    () from /usr/lib/libkorganizer_eventviewer.so.4
#8  0xb09171fe in CalendarView::changeIncidenceDisplay(KCal::Incidence*, int)
    () from /usr/lib/libkorganizerprivate.so.4
#9  0xb091fc3f in CalendarView::incidenceChanged(KCal::Incidence*, KCal::Incidence*, int) () from /usr/lib/libkorganizerprivate.so.4
#10 0xb092459c in CalendarView::qt_metacall(QMetaObject::Call, int, void**) ()
   from /usr/lib/libkorganizerprivate.so.4
#11 0xb7e26580 in QMetaObject::activate(QObject*, int, int, void**) ()
   from /usr/lib/libQtCore.so.4
#12 0xb7e27302 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#13 0xb080ef0f in KOrg::IncidenceChangerBase::incidenceChanged(KCal::Incidence*, KCal::Incidence*, int) () from /usr/lib/libkorganizer_interfaces.so.4
#14 0xb09bd931 in IncidenceChanger::changeIncidence(KCal::Incidence*, KCal::Incidence*, int, bool) () from /usr/lib/libkorganizerprivate.so.4
#15 0xb08ff22e in ?? () from /usr/lib/libkorganizerprivate.so.4
#16 0xb5c71c6b in QSortFilterProxyModel::setData(QModelIndex const&, QVariant const&, int) () from /usr/lib/libQtGui.so.4
#17 0xb5c96c3d in QStyledItemDelegate::editorEvent(QEvent*, QAbstractItemModel*, QStyleOptionViewItem const&, QModelIndex const&) ()
   from /usr/lib/libQtGui.so.4
#18 0xb5bf3bd6 in QAbstractItemViewPrivate::sendDelegateEvent(QModelIndex const&, QEvent*) const () from /usr/lib/libQtGui.so.4
#19 0xb5bf3e8b in QAbstractItemView::edit(QModelIndex const&, QAbstractItemView::EditTrigger, QEvent*) () from /usr/lib/libQtGui.so.4
#20 0xb5bf4147 in QAbstractItemView::mouseReleaseEvent(QMouseEvent*) ()
   from /usr/lib/libQtGui.so.4
#21 0xb5c2d894 in QTreeView::mouseReleaseEvent(QMouseEvent*) ()
   from /usr/lib/libQtGui.so.4
#22 0xb577ea62 in QWidget::event(QEvent*) () from /usr/lib/libQtGui.so.4
#23 0xb5ab4a83 in QFrame::event(QEvent*) () from /usr/lib/libQtGui.so.4
#24 0xb5b4b1bf in QAbstractScrollArea::viewportEvent(QEvent*) ()
   from /usr/lib/libQtGui.so.4
#25 0xb5bf5f3f in QAbstractItemView::viewportEvent(QEvent*) ()
   from /usr/lib/libQtGui.so.4
#26 0xb5c2dae4 in QTreeView::viewportEvent(QEvent*) ()
   from /usr/lib/libQtGui.so.4
#27 0xb5b4d765 in ?? () from /usr/lib/libQtGui.so.4
#28 0xb7e10b3a in QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#29 0xb57268da in QApplicationPrivate::notify_helper(QObject*, QEvent*) ()
   from /usr/lib/libQtGui.so.4
#30 0xb572f111 in QApplication::notify(QObject*, QEvent*) ()
   from /usr/lib/libQtGui.so.4
#31 0xb78ce41d in KApplication::notify(QObject*, QEvent*) ()
   from /usr/lib/libkdeui.so.5
#32 0xb7e11961 in QCoreApplication::notifyInternal(QObject*, QEvent*) ()
   from /usr/lib/libQtCore.so.4
#33 0xb572e39e in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&) () from /usr/lib/libQtGui.so.4
#34 0xb5798716 in ?? () from /usr/lib/libQtGui.so.4
#35 0xb5797ac5 in QApplication::x11ProcessEvent(_XEvent*) ()
   from /usr/lib/libQtGui.so.4
#36 0xb57c008a in ?? () from /usr/lib/libQtGui.so.4
#37 0xb509e9a8 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#38 0xb50a2063 in ?? () from /usr/lib/libglib-2.0.so.0
#39 0xb50a2221 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#40 0xb7e3bfb8 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#41 0xb57bf785 in ?? () from /usr/lib/libQtGui.so.4
#42 0xb7e1001a in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#43 0xb7e101da in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) ()
   from /usr/lib/libQtCore.so.4
#44 0xb7e12895 in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#45 0xb5726777 in QApplication::exec() () from /usr/lib/libQtGui.so.4
#46 0x0804c19f in _start ()
Comment 5 Dario Andres 2009-01-19 22:10:35 UTC
Can this be related to bug 176991 ?
Comment 6 Sergio Martins 2009-02-11 23:33:52 UTC
Can you go to the localdir folder you choose and run:

grep UID *.ical | wc -l
grep UID *.ical | uniq | wc -l

both results should be the same (adjust the extension accordingly)
Comment 7 xzill 2009-02-21 18:05:14 UTC
grep UID *.ics | wc -l             Output: 601                                                      
grep UID *.ics | uniq | wc -l      Output: 601                                                      

grep UID a*.ics | wc -l            Output: 90                                                       
grep UID a*.ics | uniq | wc -l     Output: 90                                                       

grep UID B*.ics | wc -l            Output: 351
grep UID B*.ics | uniq | wc -l     Output: 351

grep UID i*.ics | wc -l            Output: 159
grep UID i*.ics | uniq | wc -l     Output: 159

grep UID t*.ics | wc -l            Output: 1
grep UID t*.ics | uniq | wc -l     Output: 1
Comment 8 Sergio Martins 2009-03-09 03:47:15 UTC
Can you get a valgrind report?

1. Install valgrind
2. Run: valgrind korganizer --nofork &> report.txt
3. Be patient, valgrind can take 3 minutes to start korganizer
4. When it crashes attach report.txt here

Thanks
Comment 9 xzill 2009-03-11 13:21:33 UTC
Created attachment 32021 [details]
valgrind-report
Comment 10 Sergio Martins 2009-03-11 14:58:50 UTC
Thanks for the valgrind report.

I just reproduced this. Seems the calendar resource gets closed and reopened after every change, when it gets closed to-dos are deleted, if you try to read them before the calendar gets reopened you get an invalid read.

I suggest you use a "Calendar in Local File" while this isn't fixed.
Comment 11 Sergio Martins 2009-03-30 05:42:47 UTC
*** Bug 187582 has been marked as a duplicate of this bug. ***
Comment 12 Sergio Martins 2009-03-30 05:43:45 UTC
*** Bug 187494 has been marked as a duplicate of this bug. ***
Comment 13 Sergio Martins 2009-03-30 05:44:46 UTC
*** Bug 187493 has been marked as a duplicate of this bug. ***
Comment 14 Sergio Martins 2009-03-30 05:45:56 UTC
*** Bug 187489 has been marked as a duplicate of this bug. ***
Comment 15 Juha Tuomala 2009-03-30 11:54:03 UTC
(In reply to comment #10)
> I just reproduced this. Seems the calendar resource gets closed and reopened
> after every change, when it gets closed to-dos are deleted, if you try to read
> them before the calendar gets reopened you get an invalid read.

I agree, I've seen that data changes on disk instantly. There is an another issue, that save button (floppy icon) becomes unshaded indicating that the changes are not written into disk yet, which is untrue.

I don't mind that changes get written immediately to the disk, korganizer doesn't have a save option these days either. It could be an optional behavior in resource settings if someone has energy to implement it. But misleading behavior should be fixed.
Comment 16 Sergio Martins 2009-04-16 22:25:43 UTC
SVN commit 955052 by smartins:

Change the way resource local dir handles changes, this fixes some segfaults and avoids closing the calendar each time an incidence 
is modified.

Review: http://reviewboard.kde.org/r/516/
BUG: 180221
BUG: 187595



 M  +129 -48   resourcelocaldir.cpp  
 M  +23 -6     resourcelocaldir_p.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=955052
Comment 17 Sergio Martins 2009-04-29 14:39:14 UTC
SVN commit 960992 by smartins:

Backport r955052 by smartins from trunk to the 4.2 branch:

Change the way resource local dir handles changes, this fixes some segfaults and avoids closing the calendar each time an incidence 
is modified.

Review: http://reviewboard.kde.org/r/516/
CCBUG: 180221
CCBUG: 187595



 AM            assignmentvisitor_p.h   [License: LGPL (v2+)]
 A             comparisonvisitor_p.h   [License: LGPL (v2+)]
 M  +304 -45   resourcelocaldir.cpp  
 M  +23 -6     resourcelocaldir_p.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=960992