Change the way resource local dir handles changes, this fixes some segfaults and avoids closing the calendar each time an incidence is modified.

Review: http://reviewboard.kde.org/r/516/
BUG: 180221
BUG: 187595


svn path=/trunk/KDE/kdepimlibs/; revision=955052